<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="us.spencer.habittracker.MainActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white"
        android:title="@string/global_action_add"
        app:showAsAction="always" />

</menu>
